--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,5 +1,6 @@
-book_filename: "primer-bookdown"
+book_filename: "personal-bookdown"
 delete_merged_file: true
+output_dir: 'docs'
 language:
   ui:
     chapter_name: "Capítulo "
