--- a/_output.yml
+++ b/_output.yml
@@ -4,7 +4,7 @@ bookdown::gitbook:
     toc:
       collapse: section
       before: |
-        <li><a href="./">Personal Book</a></li>
+        <li><a href="./">Libro Personal</a></li>
     sharing:
       facebook: no
       twitter: no
